src/code/snapshots/tvm__code__tests__variable.snap
---
source: src/code/tests.rs
expression: "emit!(r#\"\n        let v = 0;\n    \"#)"
---
function "main" {
  constants: []
  bytecode: [
    0  load_smi 0, r1  // let v = 0;
    3  load_unit r0    // 
    5  ret r0          // 
    7  stop            // 
  
  ]
}


