src/code/snapshots/tvm__code__tests__variable_shadowing.snap
---
source: src/code/tests.rs
expression: "emit!(r#\"\n        let a = 0;\n        let a = 0;\n        let b = 0;\n    \"#)"
---
function "main" {
  registers: 3 (0 params)
  literals: []
  bytecode: (5 ops) [
    smi 0, r1  // let a = 0;
    smi 0, r1  // let a = 0;
    smi 0, r2  // let b = 0;
    unit r0    // 
    ret        //   
  ]
}


